--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.12.2"
+    "@netlify/plugin-nextjs": "file:./plugin-nextjs/"
   }
 }
